Fixed broken discount statistics chart

--- a/src/html/views/admin/statistics/statistics.html
+++ b/src/html/views/admin/statistics/statistics.html
@@ -29,7 +29,7 @@
                 </div>
                 <input class="mt-3" type="month" id="monthInput" onchange="filterMonthChart(this)">
                 <h1 class="h1 text-center mt-5">Mean Discount For (Sub)Category Per Day</h1>
-                <p id="defaultCategoryText" class="p text-center">Default: Subcategory Οδοντόβουρτσες</p>
+                <p id="defaultCategoryText" class="p text-center">Default: Subcategory Χυμός Τομάτας</p>
                 <div id="liveAlertPlaceholder" class="mt-5"></div>
                 <div class="container-canvas tab-content mt-5" id="statisticsTab">
                     <canvas style="myCharts" id="discountChart"></canvas>
